Edited some things

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div id="todo-list" class="todo-container">
+      <h1>Lista de tarefas</h1>
       <div id="new-task">
         <input type="text" placeholder="Nova tarefa..." />
         <button id="push-task">Adicionar</button>
